--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - test/**/*
     - vendor/**/*
     - ruby/**/*
+    - Vagrantfile
 
 AlignParameters:
   Enabled: false
@@ -19,3 +20,5 @@ LineLength:
   Enabled: false
 MethodLength:
   Max: 30
+Style/FrozenStringLiteralComment:
+  Enabled: false
